try to add JavaFX